import "user_info.proto";
package com.zhaoyan.juyou;

option java_package = "com.zhaoyan.communication.protocol.pb";
option java_outer_classname = "PBLoginProtos";
message PBLoginRequest {
	required PBUserInfo userInfo = 1;
}

message PBLoginRespond {
	required PBLoginResult result = 1;
	optional int32 userId = 2;
	optional PBLoginFailReason failReason = 3;
}

enum PBLoginResult {
	SUCCESS = 1;
	FAIL = 2;
}

enum PBLoginFailReason {
	UNKOWN = 1;
}